- Added Boris' Ai code - Removed duplicate code - Modified current stable code to allow ai to be added - Changed name for .h, .ui, and .cpp to be for Connect 4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,9 @@ set(PROJECT_SOURCES
     battleship.ui
     boardgrid.cpp
     boardgrid.h
-    game.cpp
-    game.h
-    game.ui
+    Connect4.cpp
+    Connect4.h
+    Connect4.ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
