--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,8 @@ endif()
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(COP_II MANUAL_FINALIZATION ${PROJECT_SOURCES})
 else()
-    add_executable(COP_II ${PROJECT_SOURCES})
+    add_executable(COP_II ${PROJECT_SOURCES}
+        Coordinates.h)
 endif()
 
 target_link_libraries(COP_II PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
