--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,9 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(COP_II MANUAL_FINALIZATION ${PROJECT_SOURCES})
 else()
     add_executable(COP_II ${PROJECT_SOURCES}
-        Coordinates.h)
+        Coordinates.h
+        ShipSystem.h
+        ShipSystem.cpp)
 endif()
 
 target_link_libraries(COP_II PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
