--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,24 +2,24 @@ cmake_minimum_required(VERSION 3.16)
 
 project(COP_II VERSION 0.1 LANGUAGES CXX)
 
-# Enhanced Debug Configuration
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Debugging and Sanitizer Options
+# Debugging and warnings
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")  # Improved debug symbols
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")  # Additional warnings
 
+# Enable Qt automoc, autouic, autorcc
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
+# Find Qt package (Qt6 preferred, fallback to Qt5)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
+# Source files
 set(PROJECT_SOURCES
     main.cpp
     mainwindow.cpp
@@ -38,10 +38,12 @@ set(PROJECT_SOURCES
     tictactoe.ui
 )
 
+# Default to Debug build if none specified
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Build type" FORCE)
 endif()
 
+# Add executable target and link Qt libraries
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(COP_II MANUAL_FINALIZATION ${PROJECT_SOURCES})
 else()
